--- a/pvd_client/src/styles/globals.css
+++ b/pvd_client/src/styles/globals.css
@@ -117,8 +117,8 @@ main {
 }
 
 .block {
-  width: 150px;
-  height: 30px;
+  width: 30vh;
+  height: 5vh;
   background-color: #6367ac;
   border-radius: 5px;
 }
@@ -131,8 +131,8 @@ main {
 }
 
 .screen {
-  width: 300px;
-  height: 200px;
+  height: 50vh;
+  width: 75vh;
   background-color: #fff;
   border-radius: 10px;
   margin-bottom: 20px;
